# baseball-rag

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.hermes/skills/gitbutler/: SKILL.md
data/: manifest.json
docs/: api.md  architecture-explorer-plan.md  architecture.md  cli.md  corpus.md  demo-checklist.md  development.md  eval-report.md  player-bio-chroma-plan.md
evals/: __init__.py  questions.py  questions.yaml
space-app/: Dockerfile  README.md
src/baseball_rag/: __init__.py  cli.py  mcp.py  provenance.py  service.py  web_app.py
src/baseball_rag/api/: server.py
src/baseball_rag/arch/: __init__.py  components.py  diagram.py  tracing.py
src/baseball_rag/corpus/: __init__.py  __main__.py  diagnostics.py  frontmatter.py  ingest.py  player_bios.py
src/baseball_rag/db/: __init__.py  create_seed.py  download.py  duckdb_schema.py  freeform.py  lahman.py  queries.py  stat_registry.py  team_history.py
src/baseball_rag/embedder/: __init__.py
src/baseball_rag/generation/: __init__.py  answer.py  llm.py  prompt.py
src/baseball_rag/retrieval/: __init__.py  chroma_store.py  strategies.py
src/baseball_rag/routing/: __init__.py  query_router.py
src/data/: chroma.sqlite3  lahman.sqlite
src/mlb_api_mcp/: main.py
tests/: conftest.py  test_api.py  test_arch_components.py  test_arch_registry.py  test_chroma_store.py  test_cli_player_query.py  test_cli_stat_query_integration.py  test_corpus_content.py  test_corpus_diagnostics.py  test_dashboard.py  test_db_download.py  test_diagram_ui.py  test_docker.py  test_embedder.py  test_eval_questions.py  test_freeform.py  test_generation.py  test_gradio.py  test_ingest_player_bios.py  test_llm.py  test_pipeline.py  test_pipeline_tracing.py  test_pipeline_tracing_integration.py  test_placeholder.py  test_player_bio.py  test_player_bio_fallback.py  test_player_bio_query.py  test_prompts.py  test_queries.py  test_retrieval_strategies.py  test_router.py  test_router_player_bio.py  test_router_player_detection.py  test_router_this_year.py  test_run_all_tests.py  test_stat_leaders_range_db.py  test_triple_crown.py
(+15 files in other folders)
