[project]
name = "baseball-rag"
version = "0.1.0"
description = "Baseball RAG application — query MLB history with natural language"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "duckdb",
    "chromadb",
    "typer",
    "fastapi",
    "gradio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[project.scripts]
baseball-rag = "baseball_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/baseball_rag"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]