[project]
name = "baseball-rag"
version = "0.1.0"
description = "Baseball RAG application — query MLB history with natural language"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "duckdb",
    "chromadb",
    "typer",
    "fastapi",
    "gradio",
    # MLB Stats API MCP
    "fastmcp>=2.10.6",
    "python-mlb-statsapi>=0.5.26",
    "uvicorn[standard]>=0.24.0",
    "pybaseball>=2.2.7",
    "unidecode>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[project.scripts]
baseball-rag = "baseball_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_rag", "src/mlb_api_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast, mocked tests — no external services required",
    "integration: requires live services (ChromaDB, LM Studio, Gradio, etc.)",
    "slow: long-running or heavy setup (full pipeline runs, ingestion)",
]

[tool.coverage.run]
source = ["src/baseball_rag"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
